- improve error reporting - compile w jdk 8 to run with most java installs